# fastapi-sqlalchemy-1.4-async

./: .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api/dependencies/: db.py
app/api/routes/: api.py  coupons.py
app/core/: config.py
app/db/: base.py  base_class.py  errors.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 750cdc702a91_.py  7db66d4b0914_.py
app/db/repositories/: base.py  coupons.py
app/db/tables/: coupons.py
app/models/schema/: base.py  coupons.py
tests/: conftest.py
tests/app/: test_main.py
tests/app/api/routes/: test_coupons.py
